--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,11 +4,12 @@ on:
   push:
     branches: [ "main" ]
 
+env:
+  ANDROID_SDK_TOOLS_VERSION: ${{ vars.ANDROID_SDK_TOOLS_VERSION }}
+
 jobs:
   push_tools:
     runs-on: ubuntu-latest
-    env:
-      ANDROID_SDK_TOOLS_VERSION: 9123335
     steps:
       - uses: actions/checkout@v3
       - uses: docker/setup-qemu-action@v2
@@ -35,8 +36,10 @@ jobs:
     strategy:
       matrix:
         include:
+          - platform: 34
+            build-tools: 34.0.0
           - platform: 33
-            build-tools: 33.0.1
+            build-tools: 33.0.2
           - platform: 32
             build-tools: 32.0.0
           - platform: 31
